--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "element-ui": "^2.15.0",
     "nuxt": "^2.14.12"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "fibers": "^5.0.0",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1"
+  }
 }
