--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/robots": "^2.4.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.0",
     "nuxt": "^2.14.12"
