--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nuxtjs/robots": "^2.4.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.0",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "nuxt-i18n": "^6.20.0",
+    "vue-i18n": "^8.22.4"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
