--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-i18n": "^8.22.4"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "fibers": "^5.0.0",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1"
